2019-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Tweak direct rendering.

	* src/ftcommon.c (FT_Demo_Sketch_Glyph_Color): Redefine surface origin
	and clipping box instead of shifting outline.
	* src/ftgrid.c (grid_status_draw_outline): Tweaked.
	* graph/gblspans.h: Simplify.
	* graph/grobjs.h (grSurface): Introduce `origin' byte. 
	* graph/gblblit.c: Silence compilation warning.

2019-06-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Direct outline drawing.

	Now we can test `FT_RASTER_FLAG_DIRECT' and it is also faster because
	the glyph outline image is extremely sparse.

	* src/ftcommon.[hc] (FTDemo_Sketch_Glyph_Color): Implement rendering
	in direct mode.
	* src/ftgrid.c (grid_status_draw_outline): Use it.

2019-06-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement and register gray_span function.

	* graph/gblspans.h, graph/gblany.h (_gblender_spans_*): New functions.
	* graph/grobjs.h (grSurface): New fields `gray_spans' and `gcolor'. 
	* graph/gblblit.c (grSetSurfaceGamma): Initialize `gray_spans'.
	* graph/rules.mk: Add new file.

2019-06-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Clearly separate two blenders.

	* graph/gblblit.[hc] (grBlitGlyphToSurface): Declare and define it.
	* graph/grblit.c (grBlitGlyphToBitmap): Call `grBlitGlyphToSurface'.
	* graph/gblender.c: Minor.

2019-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (bit): Surface bitmap must belong to surface.
	* graph/graph.h (grBlitGlyphToBitmap): Clarify documentation.
	* graph/grdevice.c (grNewSurface): Initialize default blender.

2019-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/*/rules.mk: Add missing dependency.

2019-06-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c (grBlitGlyphToBitmap): Move code from here...
	* graph/gblblit.c (gblender_blit_init): ... to here.
	* graph/gblblit.h: Updated.

2019-06-15  Alexei Podtelezhnikov  <apodtele@gmail.com>
